Добавлена функция "Изменить имя"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
 
     <!--Custom-->
-    <string name="s_def_name">Владислав Лис</string>
+    <string name="s_def_name">Vlad Zaveryukhin</string>
     <string name="s_def_online">В сети</string>
     <string name="s_text_acc">Аккаунт</string>
     <string name="s_def_phone">+77053009129</string>
