--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,11 @@
     <string name="app_data_update">Данные обновленны!</string>
     <string name="s_menu_exit">Выход</string>
     <string name="s_menu_change_name">Изменить имя</string>
+    <string name="hide_chat">Скрыть чат</string>
+    <string name="delete_chat">Удалить чат</string>
 
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="email">Если найдете баги/недочеты Предложите идеи - пишите на эл.почту gerfox@bk.ru</string>
+    <string name="dev_alone"><![CDATA[Данное приложение <GerFox Message> находится в разработке. Так как им занимается один человек.]]></string>
+    <string name="info">Информация</string>
 </resources>
